--- a/christmas/Santa.html
+++ b/christmas/Santa.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    
+
 
     <div id="n1">
         <h1>Happy Christmas Day</h1>
@@ -18,13 +18,16 @@
         <h2>
             <p id="line">
 
-                Christmas Speech is usually given on Christmas day which is on 25th December every year. Kids look forward to
-                this festival. Schools shut the classroom for this and also celebrate this day. Many events are conducted.
-                Kids are encouraged to give the Best Christmas Speech Ever. It is a Christian holiday to celebrate the birth
+                Christmas Speech is usually given on Christmas day which is on 25th December every year. Kids look
+                forward to
+                this festival. Schools shut the classroom for this and also celebrate this day. Many events are
+                conducted.
+                Kids are encouraged to give the Best Christmas Speech Ever. It is a Christian holiday to celebrate the
+                birth
                 of Jesus Christ. But everyone celebrates this annual holiday that marks the goodness and togetherness of
                 people.
-            </p> 
-         </h2>
+            </p>
+        </h2>
     </div>
 
     <video controls width="500px" height="500px">
