--- a/background/index.html
+++ b/background/index.html
@@ -48,14 +48,14 @@
             </div>
             <div class="text">
                 <ul type="disk">
-                    <li>
+                    <li class="b2">
                         Cascading Style Sheets (CSS) is a style sheet language used for specifying the presentation and
                         styling of a document written in a markup language such as HTML or XML (including XML dialects
                         such as SVG, MathML or XHTML). CSS is a cornerstone technology of the World Wide Web,
                         alongside HTML and JavaScript.
                     </li>
                     <br><br><br><br>
-                    <li>
+                    <li class="b2">
                         provide more flexibility and control in the specification of presentation characteristics;
                         enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css
                         file, which reduces complexity and repetition in the structural content; and enable the .css
@@ -63,7 +63,7 @@
                         formatting.
                     </li>
                     <br><br><br><br>
-                    <li>
+                    <li class="b2">
                         Separation of formatting and content also makes it feasible to present the same markup page in
                         different styles for different rendering methods, such as on-screen, in print, by voice (via
                         speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules
@@ -78,7 +78,7 @@
             </div>
             <div class="text">
                 <ul type="disk">
-                    <li>Java is a high-level, class-based, object-oriented programming language that is designed to have
+                    <li class="b3">Java is a high-level, class-based, object-oriented programming language that is designed to have
                         as few implementation dependencies as possible. It is a general-purpose programming language
                         intended to let programmers write once, run anywhere (WORA), meaning that compiled Java code
                         can run on all platforms that support Java without the need to recompile. Java applications
@@ -89,7 +89,7 @@
                         compiled languages.
                     </li>
                     <br><br><br><br>
-                    <li>
+                    <li class="b3">
                         Java gained popularity shortly after its release, and has been a very popular programming
                         language since then. Java was the third most popular programming language in 2022 according
                         to GitHub and it is ranked fourth on TIOBE index as of October 2023. Although still
@@ -97,7 +97,7 @@
                         languages using JVM gaining popularity.
                     </li>
                     <br><br><br><br>
-                    <li>
+                    <li class="b3">
                         Java was originally developed by James Gosling at Sun Microsystems. It was released in May 1995
                         as a core component of Sun's Java platform. The original and reference implementation Java
                         compilers, virtual machines, and class libraries were originally released by Sun under
