--- a/background/index.html
+++ b/background/index.html
@@ -2,6 +2,98 @@
 <html lang="en">
 
 <head>
+    <style>
+        * {
+            margin: none;
+            padding: none;
+        }
+
+        .Parent .html {
+            height: 500px;
+            width: 100%;
+            background-color: white;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            display: flex;
+        }
+
+        .Parent .html #img1 {
+            position: relative;
+            top: 200px;
+        }
+
+        .Parent .html .text {
+            position: relative;
+            top: 50px;
+            color: red;
+            font-size: 19px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            text-align: justify;
+        }
+
+        .Parent .css {
+            height: 500px;
+            width: 100%;
+            background-color: white;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            display: flex;
+            margin-top: 20px;
+        }
+
+        .Parent .css #img1 {
+            position: relative;
+            top: 200px;
+        }
+
+        .Parent .css .text {
+            position: relative;
+            top: 50px;
+            color: blue;
+            font-size: 19px;
+            font-family: 'Oswald', sans-serif;
+            text-align: justify;
+        }
+
+        .Parent .java {
+            height: 650px;
+            width: 100%;
+            background-color: white;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            display: flex;
+            margin-top: 20px;
+        }
+
+        .Parent .java #img1 {
+            position: relative;
+            top: 200px;
+        }
+
+        .Parent .java .text {
+            position: relative;
+            top: 50px;
+            color: rgb(223, 56, 56);
+            font-size: 19px;
+            font-family: 'Oswald', sans-serif;
+            text-align: justify;
+        }
+
+        .b1 {
+            background-image: linear-gradient(rgb(255, 94, 0) 20%, rgb(240, 142, 4) 80%);
+            -webkit-background-clip: text;
+            color: transparent;
+        }
+
+        .b2 {
+            background-image: linear-gradient(rgb(0, 94, 255) 20%, rgb(4, 181, 240) 80%);
+            -webkit-background-clip: text;
+            color: transparent;
+        }
+
+        .b3 {
+            background-image: linear-gradient(rgb(255, 0, 0) 20%, rgb(176, 176, 176) 80%);
+            -webkit-background-clip: text;
+            color: transparent;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background</title>
@@ -19,7 +111,8 @@
             </div>
             <div class="text">
                 <ul type="disk">
-                        <li class="b1">=>  The HyperText Markup Language or HTML is the standard markup language for documents designed to
+                    <li class="b1">=> The HyperText Markup Language or HTML is the standard markup language for
+                        documents designed to
                         be displayed in a web browser. It defines the content and structure of web content. It is often
                         assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as
                         JavaScript.
@@ -32,7 +125,7 @@
                     </li>
                     <br><br><br><br>
                     <li class="b1">
-                       => The first publicly available description of HTML was a document called "HTML Tags", first
+                        => The first publicly available description of HTML was a document called "HTML Tags", first
                         mentioned on the Internet by Tim Berners-Lee in late 1991. It describes 18 elements
                         comprising the initial, relatively simple design of HTML. Except for the hyperlink tag, these
                         were strongly influenced by SGMLguid, an in-house Standard Generalized Markup Language
@@ -78,7 +171,8 @@
             </div>
             <div class="text">
                 <ul type="disk">
-                    <li class="b3">Java is a high-level, class-based, object-oriented programming language that is designed to have
+                    <li class="b3">Java is a high-level, class-based, object-oriented programming language that is
+                        designed to have
                         as few implementation dependencies as possible. It is a general-purpose programming language
                         intended to let programmers write once, run anywhere (WORA), meaning that compiled Java code
                         can run on all platforms that support Java without the need to recompile. Java applications
