--- a/box model 2/BOX.html
+++ b/box model 2/BOX.html
@@ -2,6 +2,76 @@
 <html lang="en">
 
 <head>
+    <style>
+        #box1 {
+            margin: auto;
+            border: 8px;
+            border-style: groove;
+            border-color: rgb(94, 93, 93);
+            height: 470px;
+            width: 300px;
+            padding-top: 20px;
+        }
+
+        #box2 {
+            background-color: rgb(42, 42, 42);
+            margin: auto;
+            border: 5px;
+            border-style: inset;
+            border-color: rgb(122, 117, 117);
+            height: 440px;
+            width: 250px;
+            border-radius: 5%;
+        }
+
+        #box2 img {
+            border-radius: 5%;
+            margin: auto;
+            display: block;
+            margin-top: 5%;
+        }
+
+        a {
+            color: cornflowerblue;
+            text-decoration: none;
+        }
+
+        #color1 {
+
+            color: aliceblue;
+        }
+
+        #color2 {
+
+            color: darkgray;
+        }
+
+        .fa-solid {
+            color: gold;
+        }
+
+        #s1 {
+            color: darkgrey;
+
+        }
+
+        .button {
+            border-radius: 8px;
+            display: block;
+            margin: auto;
+            width: 60%;
+            align-items: center;
+            margin-top: 5%;
+            color: aqua;
+            background-color: grey;
+        }
+
+        .button:hover {
+            color: gold;
+            background-color: darkgray;
+            font-size: 12px;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Document</title>
@@ -20,7 +90,7 @@
             <div id="color">
                 <p>
                     <a href="#">
-                    Apple - iPhone 15 Pro Max Smartphone (256GB, Blue Titanium)
+                        Apple - iPhone 15 Pro Max Smartphone (256GB, Blue Titanium)
 
                     </a>
                 </p>
@@ -46,7 +116,7 @@
             <span id="s1">(4K+)</span>
             <button class="button">Buy Now</button>
         </div>
-        
+
 
     </div>
 </body>
