--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         <li>
             <a href="/PR 1/index.html"> PR - 1</a>
         </li>
+        <li>
+            <a href="./Exam/index.html"> Exam</a>
+        </li>
     </ul>
 </body>
 </html>
