--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         <li>
             <a href="./Exam/index.html"> Exam</a>
         </li>
+        <li>
+            <a href="./Live Project/index.html">Live Project</a>
+        </li>
     </ul>
 </body>
 </html>
