--- a/Live Project/index.html
+++ b/Live Project/index.html
@@ -87,13 +87,13 @@
           laptop, and TV without paying more.
         </p>
       </div>
-      <div class="image1">
+      <div class="img">
         <img
           src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile.png"
         />
-        <!-- <div class="video1">
+        <div class="video1">
           <video src="./video2-devices-in.m4v"></video>
-        </div> -->
+        </div>
       </div>
       <div></div>
     </div>
