--- a/New/index.html
+++ b/New/index.html
@@ -33,7 +33,7 @@
 .earth,.moon{
     position: absolute;
     border-style: solid;
-    border-color: white transparent transparent transparent;
+    border-color: white transparent transparent;
     border-width: 0.1em 0.1em 0 0;
     border-radius: 50%;
 }
