--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         <li>
             <a href="./Live Project/index.html">Live Project</a>
         </li>
+        <li>
+            <a href="./Disney push Hotstar/index.html">Live Project</a>
+        </li>
     </ul>
 </body>
 </html>
