--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <a href="./Live Project/index.html">Live Project</a>
         </li>
         <li>
-            <a href="./Disney push Hotstar/index.html">Live Project</a>
+            <a href="./Disney push Hotstar/index.html">Disney push Hotstar</a>
         </li>
     </ul>
 </body>
