--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         <li>
             <a href="./Disney+ Hotstar/index.html">Disney+ Hotstar</a>
         </li>
+        <li>
+            <a href="./jquery s/New.html"></a>
+        </li>
     </ul>
 </body>
 </html>
