--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="./Disney+ Hotstar/index.html">Disney+ Hotstar</a>
         </li>
         <li>
-            <a href="./jquery s/New.html"></a>
+            <a href="./jquery s/New.html">chess</a>
         </li>
     </ul>
 </body>
