--- a/Play Store /login.html
+++ b/Play Store /login.html
@@ -126,7 +126,7 @@
     <i style="--clr:#ffffff;"></i>
     <i style="--clr:#056e13;"></i>
     <div class="login">
-      <h2><a href="./index.html">Login</a></h2>
+      <h2><a href="./Game.html">Login</a></h2>
       <div class="inputBx">
         <input type="text" placeholder="Username">
       </div>
