--- a/Play Store /sing-up.html
+++ b/Play Store /sing-up.html
@@ -402,7 +402,7 @@
   </head>
   <body>
     <div id="logo" class="logo1">
-      <h1><i><a href="./index.html">Sing Up</a></i></h1>
+      <h1><i><a href="./Game.html">Sing Up</a></i></h1>
     </div>
     <section class="stark-login">
       <form action="" method="">
