--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         <li>
             <a href="./Exam-j/index.html">TO-DO List</a>
         </li>
+        <li>
+            <a href="./Exam 3/index.html">TO-DO List</a>
+        </li>
     </ul>
 </body>
 </html>
