--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a href="./Exam-j/index.html">TO-DO List</a>
         </li>
         <li>
-            <a href="./Exam 3/index.html">TO-DO List</a>
+            <a href="./Exam 3/index.html">Test</a>
         </li>
     </ul>
 </body>
