--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         <li>
             <a href="./Exam 3/index.html">Test</a>
         </li>
+        <li>
+            <a href="./FOOD WEBSITE/index.html">Test</a>
+        </li>
     </ul>
 </body>
 </html>
