--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a href="./Exam 3/index.html">Test</a>
         </li>
         <li>
-            <a href="./FOOD WEBSITE/index.html">Test</a>
+            <a href="./FOOD WEBSITE/index.html">FOOD WEBSITE</a>
         </li>
     </ul>
 </body>
