--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
         <li>
             <a href="./FOOD WEBSITE/index.html">FOOD WEBSITE</a>
         </li>
+        <li>
+            <a href="./EXAM 4/index.html">Exam-4</a>
+        </li>
     </ul>
 </body>
 </html>
